# roll-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  entropy.py
.github/workflows/: rust.yml
bot-utils/: Cargo.toml
bot-utils-macro/: Cargo.toml
bot-utils-macro/src/: lib.rs
bot-utils/migrations/2021-03-17-183656_per_client_config/: down.sql  up.sql
bot-utils/src/: bot_manager.rs  bots.rs  client_utils.rs  commands.rs  lib.rs  rolls.rs  storage.rs  tuple_helpers.rs
bot-utils/src/client_utils/: commands.rs  mod.rs  rolls.rs  storage.rs
bot-utils/src/client_utils/storage/: schema.rs
bot-utils/src/tuple_helpers/: bot.rs  bot_builder.rs  bot_config.rs  join.rs  result.rs
dice-roll/: Cargo.toml
dice-roll/src/: dice_roll.rs  dice_types.rs  lib.rs  limits.rs  parser.rs
dice-roll/src/parser/: roll.rs
discord-bot/: Cargo.toml
discord-bot/src/: handler.rs  lib.rs
discord-bot/src/handler/: alias.rs  command_prefix.rs  help.rs  info.rs  permissions.rs  roll.rs  roll_info.rs  roll_prefix.rs
roll-cmd/: Cargo.toml
roll-cmd/src/: main.rs
src/: dice_roll.rs  dice_types.rs  lib.rs  main.rs  parser.rs
src/parser/: roll.rs
