[package]
name = "roll-bot"
version = "0.1.0"
authors = ["Robin Marchart <robin.marchart@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-bot = {path = "discord-bot"}
bot-utils = {path = "bot-utils"}
tokio = {version="^1.3.0", features=["rt","parking_lot","rt-multi-thread","rt","macros"]}
simple_logger = "^1.11.0"
log = "^0.4.14"

[workspace]
members = ["dice-roll", "discord-bot","bot-utils"]
