[package]
name = "bot-utils"
version = "0.1.0"
authors = ["Robin Marchart <robin.marchart@tum.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/RobinMarchart/roll-bot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="^1.3.0", features=["time","sync","rt","rt-multi-thread","signal","macros"]}
robins-dice-roll = {path = "../dice-roll"}
nom = "^6.1.2"
serde = {version="^1.0.124", features=["derive","rc"]}
async-trait = "^0.1.48"
hex = "^0.4.3"
log = "^0.4.14"
rusty_pool = "^0.5.1"
rand = "^0.8.3"
rand_xoshiro = "^0.6.0"
rand_chacha = "^0.3.0"
unicode_categories = "^0.1.1"
toml = "0.5.8"
diesel = {version= "^1.4.6", default-features=false, features=["sqlite","r2d2"]}
cached = "^0.23.0"
serde_json = "^1.0.64"
