

[package]
name = "robins-dice-roll"
version = "0.1.0"
authors = ["Robin Marchart <robin.marchart@tum.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/RobinMarchart/roll-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "^0.8.3", optional=true}
nom = {version = "^6.1.2", optional=true}
serde = {version = "^1.0.124", optional=true}
log = {version = "^0.4.14", optional=true}

[features]

default = ["parser", "roll", "serde","logging"]

parser = ["nom"]

roll = ["rand"]

logging = ["log", "rand/log"]


