
[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Robin Marchart <robin.marchart@tum.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/RobinMarchart/roll-bot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bot-utils = {path = "../bot-utils"}
