
[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Robin Marchart <robin.marchart@tum.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/RobinMarchart/roll-bot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bot-utils = {path = "../bot-utils"}
serenity = {version = "^0.10.4", default-features = false, features = ["cache","client","gateway","model","rustls_backend"]}
tokio = {version="^1.3.0", features=["rt"]}
async-trait = "^0.1.48"
log = "^0.4.14"
toml = "0.5.8"
